# qt

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  solution2.md
.github/workflows/: ci.yml
config/: default.yaml  thresholds_research.yaml
config/strategies/: capitulation.yaml  carry.yaml  dca.yaml  trend.yaml
deploy/: README.md  aliyun_bootstrap.sh  qt.service
docs/: architecture.md  indicators.md  operations.md  strategy.md
scripts/: fetch_history.py  run_all.py  run_backtest.py  run_dashboard.py  run_paper.py  run_service.py  stress_test.py  walk_forward.py
src/qt/: __init__.py  cli.py  state.py
src/qt/backtest/: __init__.py  artifacts.py  engine.py  fills.py  metrics.py  montecarlo.py  walkforward.py
src/qt/core/: __init__.py  config.py  logging.py  types.py
src/qt/dashboard/: __init__.py  server.py
src/qt/data/: __init__.py  base.py  catalog.py  coinglass.py  deribit.py  derivatives.py  macro.py  market.py  news.py  nlp.py  onchain.py  sentiment.py  store.py
src/qt/execution/: __init__.py  base.py  live.py  paper.py
src/qt/indicators/: __init__.py  composite.py  derivatives.py  events.py  onchain.py  options.py  price.py  regime.py  sentiment.py  smartmoney.py  volatility.py
src/qt/monitoring/: __init__.py  alerts.py  health.py  reporting.py  state.py  supervisor.py
src/qt/risk/: __init__.py  engine.py  sizing.py  stops.py
src/qt/signal/: __init__.py  engine.py  multiframe.py
src/qt/strategies/: __init__.py  base.py  basis_carry.py  capitulation.py  carry.py  dca.py  loader.py  registry.py  runner.py  smart_dca.py  trend.py  trend_weekly.py
src/qt/strategies/sim/: __init__.py  base.py  basis_carry.py  smart_dca.py  trend_weekly.py
tests/: conftest.py  test_backtest.py  test_backtest_artifacts.py  test_dashboard_strategies.py  test_data_catalog.py  test_indicators_composite.py  test_indicators_price.py  test_monitoring_health.py  test_monitoring_supervisor.py  test_multiframe_regime.py  test_nlp.py  test_paper_broker.py  test_risk.py  test_signal_engine.py  test_smartmoney_events.py  test_state.py  test_strategies_gallery.py  test_walkforward_montecarlo.py
