[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt"
version = "0.1.0"
description = "BTC quantitative trading system focused on extreme-event mean reversion"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",
    "scipy>=1.11",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "PyYAML>=6",
    "httpx>=0.27",
    "ccxt>=4.2",
    "tenacity>=8.2",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "duckdb>=0.10",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.100",
]
notebook = [
    "jupyter",
    "matplotlib",
    "seaborn",
    "plotly",
]

[project.scripts]
qt = "qt.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as requiring network",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Re-introduced research code from the pre-merge feature branch; tolerated
# pending a follow-up cleanup pass.
"scripts/stress_test.py" = ["E702", "RUF001", "RUF002", "RUF046", "RUF100"]
"scripts/walk_forward.py" = ["E702", "RUF001", "RUF002"]
"src/qt/backtest/montecarlo.py" = ["SIM108", "RUF002"]
"src/qt/backtest/walkforward.py" = ["E731", "RUF002"]
"src/qt/indicators/regime.py" = ["N806", "RUF002"]
"src/qt/indicators/smartmoney.py" = ["RUF001", "RUF002"]
"src/qt/data/nlp.py" = ["RUF001", "RUF002"]
"src/qt/strategies/sim/*.py" = ["RUF001", "RUF002"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
